# trans-pastex

./: README.md  flake.nix  rust-toolchain
.cargo/: config.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/assets/: Sakura-1.gltf
client/assets/Amethyst-01/: amethyst-01.gltf
client/assets/Bambou-01/: bambou-01.gltf
client/assets/Cursed/: cursed.gltf
client/assets/Rock-01/: rock.gltf
client/assets/shaders/: map.frag  map.vert
client/src/: main.rs  map.rs  plugin.rs
common/: Cargo.toml
common/src/: item.rs  lib.rs  plugin.rs
plugins/test/: plugin.toml  test.rn
