[package]
name = "client"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
edition = "2018"

[dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "bevy_gltf",
    "bevy_winit",
    "bevy_wgpu",
    "render",
    "png",
    "wayland",
    "x11",
] }
bevy_egui = "0.4"
rune = "0.9"
runestick = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
