[package]
name = "client"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
edition = "2018"

[dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "bevy_gltf",
    "bevy_winit",
    "bevy_wgpu",
    "render",
    "png",
    "wayland",
    "x11",
] }
bevy_egui = "0.4"
common = { path = "../common" }
heron = { git = "https://github.com/elegaanz/heron.git", rev = "1da53492d5e98436277177ee1607b0f5eec588db" }
#heron = { path = "../../heron" }
runestick = "0.9"
